# talos-a2a-mcp-server

./: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GITHUB_GUIDE.md  Makefile  PROJECT_STRUCTURE.txt  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  setup.sh
examples/: config.yaml
src/talos_mcp_server/: __init__.py  server.py  talos_client.py
tests/: __init__.py  test_server.py
